# microsoft-graph-python

./: .env.template  .gitignore  404.html  Dockerfile  Makefile  README.md  get_elapsed_time_before_reply_all.sh  index.html  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker-release.yaml  ghcr-release.yaml
docs/: index.md
notebooks/: playground.ipynb
scripts/: main.py
search/: search_index.json
tests/: test_core.py
